# TYWBOT-For-NoneBot-Onebot-v11

./: .disabled_plugins  .env.example  .env.prod  LICENSE  README.md  bot.py  config.json  data.db  pyproject.toml  requirements.txt  run-test.py  secret.key  spam_config.json  spam_detection_config.json  spam_protection_config.json  switch_status.json
config/LiteBot/: config.yaml
data/hypixel/: config.json
litebot_utils/: captcha.py  captcha_manager.py  config.py  event.py  models.py  rule.py  token_bucket.py  utils.py
litebot_utils/blacklist/: black.py  models.py
migrations/: env.py
migrations/versions/: 33e081945e54_init.py  afb5fc69c91d_Captcha-Updated.py  bfe784d0886d_创建subadmin表.py  c1c52311f8be_添加bw.py  f65219e033c6_subadmin.py
src/TYWBOT2.egg-info/: PKG-INFO  SOURCES.txt
src/plugins/: help.py  killbot.py  mute.py  peekserver.py  system-about.py  testpicture.py  你画我猜.py  同意好友申请.py  喜报.py  建筑大师.py  禁言.py  禁言我.py  网易云用户歌手查询.py  解除禁言.py  谁是杀手.py
src/plugins/LiteBot/: __init__.py  status.py
src/plugins/datafunc/: __init__.py  base64.py  md5.py  qr.py  sha1.py  sha256.py
src/plugins/group/: __init__.py  bad_words.py  badwords.json  join_msg.py  join_test.py  kick.py  mute.py  notice.py  recall.py  subadmin.py  switch.py  welcome_switch.py
src/plugins/manager/: __init__.py  add.py  auto_clean.py  ban.py  black.py  leave.py  list_black.py  pardon.py  send.py
src/plugins/menu/: __init__.py  commands.py  dark.css  manager.py  models.py  utils.py
src/plugins/nonebot_plugin_mclib/: __init__.py  player.py  server.py
src/plugins/web/: __init__.py  nslookup.py  send_ping.py  utils.py  whois.py  wping.py
