[project]
name = "TYWBOT2"
version = "0.1.0"
description = "TYWBOT2"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "aiohttp>=3.12.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-htmlrender>=0.6.6",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm[aiomysql,asyncmy,default]>=0.8.1",
    "nonebot2[fastapi]>=2.4.2",
    "pillow>=11.2.1",
    "ping3>=4.0.8",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.11.5",
    "qrcode>=8.2",
    "mcstatus>=12.0.1",
    "aiomysql>=0.2.0",
    "async-lru>=2.0.5",
    "jieba>=0.42.1",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_analysis_bilibili", "nonebot_plugin_addFriend", "nonebot_plugin_BiliRequestAll"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
[tool.ruff]
line-length = 88
target-version = "py311"
[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
    "I",     # isort
    "PERF",  # pylint-performance
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = []
